<resources>


    <string name="app_name" translatable="false">A-Level: Bubble &amp; Spirit Tool</string>

    <string name="app_id" translatable="false">ca-app-pub-5111357348858303~6565532716</string>
    <string name="b1" translatable="false">ca-app-pub-5111357348858303/5328510653</string>
    <string name="url_privacy_policy" translatable="false">https://qrat-d1ad1.web.app/bubblelevel/privacy_policy.html</string>



    <string name="abc_bubbleColor">Bubble Color</string>
    <string name="abc_bubbleSensitivity">Bubble Sensitivity</string>
    <string name="abc_calibrate">Calibrate</string>
    <string name="abc_calibrateText">Place your device facing upwards in a leveled and flat surface (e.g the floor of your room) and press CALIBRATE. To reset to factory calibration press RESTORE.</string>
    <string name="abc_calibration_finished">Calibration finished</string>

    <string name="abc_cero_degrees">-00.00º</string>
    <string name="abc_liquidColor">Liquid Color</string>
    <string name="abc_moreApps">More apps</string>
    <string name="abc_pause">Pause or continue</string>
    <string name="abc_permission_explanation">Camera permission is needed to display visual information on screen</string>
    <string name="abc_precision">Precision</string>
    <string name="abc_remove_ads">Remove ads and support this project</string>
    <string name="abc_restore">Restore</string>
    <string name="abc_restore_settings">Restore initial settings</string>
    <string name="abc_save_settings">Save</string>
    <string name="abc_settings">Settings</string>
    <string name="abc_settings_saved">Settings saved</string>
    <string name="abc_share">Share with…</string>
    <string name="abc_showSign">Show negative sign</string>
    <string name="abc_start">Start</string>


</resources>
