<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_gradient">


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonsLayout0"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/c0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/abc_calibrate"
            tools:ignore="ContentDescription" />


        <ImageButton
            android:id="@+id/c1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/abc_share"
            android:scaleType="fitCenter"
            android:src="@drawable/share" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/buttonsLayout0"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/transparent"
        android:contentDescription="@string/abc_share"
        android:scaleType="fitCenter"
        android:src="@drawable/pause" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="1dp"
        android:scaleType="fitCenter"
        android:src="@drawable/visual_cross2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/greenCross"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/visual_circle"
        tools:ignore="ContentDescription" />

    <!--    android:layout_alignParentBottom="true"-->

    <TextView
        android:id="@+id/degreesText"
        style="@style/translucentDegreesText"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout0"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:text="@string/abc_cero_degrees" />

    <LinearLayout
        android:id="@+id/buttonsLayout0"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/settingsheader"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/abc_settings"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/calibrateButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/abc_calibrate"
            android:scaleType="fitCenter"
            android:src="@drawable/abc_calibrate"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/classicButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/abc_calibrate"
            tools:ignore="ContentDescription" />


        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/abc_share"
            android:scaleType="fitCenter"
            android:src="@drawable/share" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
